# dbt-project

./: .gitignore  .user.yml  .yamllint.yml  dbt_project.yml  justfile  profiles.yml  pyproject.toml
.github/workflows/: ci.yml
macros/: cents_to_dollars.sql
models/marts/: dim_customers.sql  dim_stores.sql  dim_supplies.sql  fct_orders.sql  models.yml
models/staging/: models.yml  sources.yml  stg_customers.sql  stg_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql
