[project]
name = "dbt-project"
version = "0.1.0"
description = "A simple dbt project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.9.3",
    "dbt-duckdb>=1.9.2",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "sqlfluff>=3.3.1",
    "sqlfluff-templater-dbt>=3.3.1",
    "yamllint>=1.37.0",
]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.ruff]
extend-exclude = ["target", "dbt_packages"]

[tool.ruff.lint]
extend-select = ["I"]
